--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-save
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+	body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f1f1f1;
+}
+
+.birthday-person {
+    text-align: left;
+    padding: 20px;
+    background-color: #ffffff;
+
+}
+
+
+.birthday-card {
+    text-align: center;
+    max-width: 400px;
+    margin: 0px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border: 5px solid #555;
+}
+
+img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+    animation: fadeIn 2s ease infinite;
+}
+
+h1 {
+    font-size: 28px;
+    color: #333;
+    margin-top: 20px;
+    animation: slideInLeft 1.5s ease infinite;
+}
+
+p {
+    font-size: 16px;
+    color: #666;
+    margin-top: 10px;
+    animation: slideInRight 1.5s ease infinite;
+}
+
+
+    </style>
+    <title>Birthday Wishes Card</title>
+</head>
+<body>
+   <div class="birthday-person">
+        <h1>Birthday Cards</h1>
+   </div>
+
+    <div class="birthday-card">
+	<p><a href="https://Krisdileep9/github.io/bithday_image1.jpg">Happy Birthday card1</a></p>
+	<p><a href="https://Krisdileep9/github.io/bithday_image2.jpg">Happy Birthday card2</a></p>
+	<p><a href="https://Krisdileep9/github.io/bithday_image3.jpg">Happy Birthday card3</a></p>
+	<p><a href="https://Krisdileep9/github.io/bithday_image4.jpg">Happy Birthday card4</a></p>
+	<p><a href="https://Krisdileep9/github.io/bithday_image5.jpg">Happy Birthday card5</a></p>
+	<p><a href="https://Krisdileep9/github.io/bithday_image6.jpg">Happy Birthday card6</a></p>
+
+    </div>
+</body>
+</html>
