1st release fix

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ p {
    </div>
 
     <div class="birthday-card">
-	<p><a href="https://Krisdileep9/github.io/bithday_image1.jpg.html">Happy Birthday card1</a></p>
-	<p><a href="https://Krisdileep9/github.io/bithday_image2.jpg">Happy Birthday card2</a></p>
-	<p><a href="https://Krisdileep9/github.io/bithday_image3.jpg">Happy Birthday card3</a></p>
-	<p><a href="https://Krisdileep9/github.io/bithday_image4.jpg">Happy Birthday card4</a></p>
-	<p><a href="https://Krisdileep9/github.io/bithday_image5.jpg">Happy Birthday card5</a></p>
-	<p><a href="https://Krisdileep9/github.io/bithday_image6.jpg">Happy Birthday card6</a></p>
+    <p><a href="https://krisdileep9.github.io/github.io/bithday_image1.jpg">Happy Birthday card1</a></p>
+	<p><a href="https://krisdileep9.github.io/github.io/bithday_image2.jpg">Happy Birthday card2</a></p>
+	<p><a href="https://krisdileep9.github.io/github.io/bithday_image3.jpg">Happy Birthday card3</a></p>
+	<p><a href="https://krisdileep9.github.io/github.io/bithday_image4.jpg">Happy Birthday card4</a></p>
+	<p><a href="https://krisdileep9.github.io/github.io/bithday_image5.jpg">Happy Birthday card5</a></p>
+	<p><a href="https://krisdileep9.github.io/github.io/bithday_image6.jpg">Happy Birthday card6</a></p>
 
     </div>
 </body>
